--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     border: solid 1px #dfdfdf;
 }
 
-.blog-article:nth-child(1), .blog-article:nth-child(2) {
+.blog-article:nth-child(-n+2) {
     margin-right: 30px;
 }
 
